# gaussdb-obs-tape-archive

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  scheduler.py
config/: archive_config.json.example
obs/: __init__.py  const.py  convertor.py
src/: archiver.py  catalog.py  cleaner.py  cli.py  compat.py  config.py  errors.py  manifest.py  models.py  obs_client.py  packer.py  policy.py  reaper.py  restorer.py  scanner.py  storage_estimator.py  tape_lib.py  utils.py  week_boundary.py
tests/: conftest.py  test_archiver.py  test_catalog.py  test_cleaner.py  test_cli.py  test_cli_confirmation.py  test_config.py  test_e2e.py  test_errors.py  test_models.py  test_obs_client.py  test_pack_all_weeks.py  test_packer.py  test_policy.py  test_reaper.py  test_restorer.py  test_scanner.py  test_storage_estimator.py  test_tape_lib.py  test_utils.py
